Updated the codes

--- a/src/VariationalInferenceNotebook.ipynb
+++ b/src/VariationalInferenceNotebook.ipynb
@@ -28,12 +28,17 @@
     "\\end{equation}\n",
     "\n",
     "where,\n",
+    "$$\n",
+    "D_{KL}{q_v(\\theta)}{p(\\theta|D)} = \\mathbb{E}_{q} \\bigg[ {\\log\\frac{q_v(\\theta)}{p(\\theta|D)}} \\bigg] \\\\\n",
+    "$$\n",
     "\n",
-    "\\begin{align*}\n",
-    "D_{KL}{q_v(\\theta)}{p(\\theta|D)} &= \\mathbb{E}_{q} \\bigg[ {\\log\\frac{q_v(\\theta)}{p(\\theta|D)}} \\bigg] \\\\\n",
-    "&= \\mathbb{E}_{q} \\bigg[ {\\log\\frac{q_v(\\theta) p(D)}{p(D|\\theta)p(\\theta)}} \\bigg] \\\\\n",
-    "&= - \\left\\{\\mathbb{E}_{q}{ [\\log p(D|\\theta) ]}- D_{KL}{q_v(\\theta)}{p(\\theta)}\\right\\} + \\log p(D)\n",
-    "\\end{align*}\n",
+    "$$\n",
+    "= \\mathbb{E}_{q} \\bigg[ {\\log\\frac{q_v(\\theta) p(D)}{p(D|\\theta)p(\\theta)}} \\bigg] \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= - \\left\\{\\mathbb{E}_{q}{ [\\log p(D|\\theta) ]}- D_{KL}{q_v(\\theta)}{p(\\theta)}\\right\\} + \\log p(D)\n",
+    "$$\n",
     "\n",
     "where the first term represents the log-likelihood of the model predictions, while the second part serves as a regularizer KL divergence between the approximate posterior $q_v(\\theta)$ and the prior distribution $p(\\theta)$. In the case where $\\log p(D)$ is constant given prior distribution $p(\\theta)$, minimizing the KL divergence is equivalent to maximizing the objective function or the Evidence Lower BOund (ELBO) given by\n",
     "\\begin{equation}\n",
