Updated the CIFAR10 code

--- a/src/VariationalInferenceNotebook.ipynb
+++ b/src/VariationalInferenceNotebook.ipynb
@@ -246,6 +246,48 @@
     "```\n",
     "\n",
     "\n",
+    "+ **EXAMPLE BNN Network Summary**\n",
+    "\n",
+    "```\n",
+    "Model: CIFAR-10 Bayesian Model \"sequential\"\n",
+    "_________________________________________________________________\n",
+    "Layer (type)                 Output Shape              Param #   \n",
+    "=================================================================\n",
+    "Conv_I (Conv2DFlipout)       (None, 32, 32, 32)        1760      \n",
+    "_________________________________________________________________\n",
+    "Conv_II (Conv2DFlipout)      (None, 32, 32, 32)        18464     \n",
+    "_________________________________________________________________\n",
+    "Max_I_ (MaxPooling2D)        (None, 16, 16, 32)        0         \n",
+    "_________________________________________________________________\n",
+    "Conv_III (Conv2DFlipout)     (None, 16, 16, 64)        36928     \n",
+    "_________________________________________________________________\n",
+    "Conv_IV (Conv2DFlipout)      (None, 16, 16, 64)        73792     \n",
+    "_________________________________________________________________\n",
+    "Max_II (MaxPooling2D)        (None, 8, 8, 64)          0         \n",
+    "_________________________________________________________________\n",
+    "Conv_V (Conv2DFlipout)       (None, 8, 8, 128)         147584    \n",
+    "_________________________________________________________________\n",
+    "Conv_VI (Conv2DFlipout)      (None, 8, 8, 128)         295040    \n",
+    "_________________________________________________________________\n",
+    "Max_III (MaxPooling2D)       (None, 4, 4, 128)         0         \n",
+    "_________________________________________________________________\n",
+    "flatten (Flatten)            (None, 2048)              0         \n",
+    "_________________________________________________________________\n",
+    "Dense_I (DenseFlipout)       (None, 128)               524416    \n",
+    "_________________________________________________________________\n",
+    "Dense_II (DenseFlipout)      (None, 10)                2570      \n",
+    "=================================================================\n",
+    "Total params: 1,100,554\n",
+    "Trainable params: 1,100,554\n",
+    "Non-trainable params: 0\n",
+    "_________________________________________________________________\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# References\n",
     "\n",
     "[1] Samuel R Bowman, Luke Vilnis, Oriol Vinyals, Andrew M Dai, Rafal Jozefowicz, and SamyBengio. Generating sentences from a continuous space.arXiv preprint arXiv:1511.06349,2015.\n",
@@ -264,6 +306,13 @@
     "\n",
     "**Author: Himanshu Sharma, Argonne National Laboratory**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
