Updated the notebook

--- a/src/VariationalInferenceNotebook.ipynb
+++ b/src/VariationalInferenceNotebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bayesian Neural Networks Background "
+    "## Bayesian Neural Networks Background with code snippets"
    ]
   },
   {
